--- a/Votron/res/layout/fragment_main.xml
+++ b/Votron/res/layout/fragment_main.xml
@@ -9,7 +9,7 @@
     tools:context="com.cj.votron.MainActivity$PlaceholderFragment" >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
 
